--- a/css/svg-chars.css
+++ b/css/svg-chars.css
@@ -318,6 +318,26 @@
   height: 6.25em;
 }
 
+.char-tm-mai-chattawa {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-tm-mai-ek {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-tm-mai-tho {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-tm-mai-tri {
+  width: 6.25em;
+  height: 6.25em;
+}
+
 .char-vl-sara-aa {
   width: 6.25em;
   height: 6.25em;
