--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -41,6 +41,8 @@ $mq-landscape = '(orientation: landscape)';
   --nav-height: 50px;
   --c-primary: $c-brand;
   --c-primary-contrast: white;
+  --c-grey-lightest: $c-grey-lightest;
+  --c-grey-light: $c-grey-light;
   --gutter: $gutter;
   --half-gutter: $half-gutter;
   --quarter-gutter: $quarter-gutter;
