--- a/css/page/about.styl
+++ b/css/page/about.styl
@@ -24,6 +24,10 @@
   }
   &__detail {
     padding-top: var(--half-gutter);
+
+    li + li {
+      padding-top: var(--quarter-gutter);
+    }
   }
   &__footer {
     align-self: end;
