--- a/css/index.styl
+++ b/css/index.styl
@@ -2,7 +2,7 @@
 @import './_mixins'
 
 @import './global'
-@import './svg-symbols.css'
+@import './svg-icons.css'
 @import './svg-chars.css'
 
 @import './atomic/typography'
