ICONS – replace direct SVG inclusion with SVG symbols

--- a/html/index.pug
+++ b/html/index.pug
@@ -23,6 +23,7 @@ html(lang="en")
     link(rel="stylesheet" href="/thailpha.css")
 
   body
+    include svg-icons.svg
     #main
     script(src="/thailpha-lib.js")
     script(src="/thailpha.js")
