CONSONANTS – add help

--- a/css/atomic/typography.styl
+++ b/css/atomic/typography.styl
@@ -1,7 +1,8 @@
 .h1 {
-  text-align: left;
   font-weight: 300;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
 }
 .h2 {
   font-weight: 700;
