--- a/css/svg-chars.css
+++ b/css/svg-chars.css
@@ -218,6 +218,11 @@
   height: 6.25em;
 }
 
+.char-consonant-explanation {
+  width: 21.875em;
+  height: 18.125em;
+}
+
 .char-dm-am {
   width: 6.25em;
   height: 6.25em;
