CONSONANTS – refine help

--- a/css/module/char-listing.styl
+++ b/css/module/char-listing.styl
@@ -154,12 +154,13 @@
 
   &__content {
     max-width: 90%;
+    max-height: 90%;
   }
 
   &__close {
     position: absolute;
-    top: var(--gutter);
-    right: var(--gutter);
+    top: var(--half-gutter);
+    right: var(--half-gutter);
     fill: white;
   }
 }
