--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -8,13 +8,12 @@ $quarter-gutter   = ($gutter / 4);
 
 $c-white          = white;
 $c-black          = #333;
-$c-blue           = blue;
 $c-pink           = #ff0078;
 $c-grey-lightest  = #F3F3F3;
 $c-grey-light     = #CCC;
 $c-grey           = #999;
 
-$c-brand          = $c-blue;
+$c-brand          = #54009D;
 $c-brand-dark     = darken($c-brand, 40%);
 
 ///////
