--- a/css/module/search.styl
+++ b/css/module/search.styl
@@ -8,7 +8,8 @@
     flex-grow: 1;
     border: 0;
     font-size: 18px;
-    padding: 0 $gutter;
+    padding: 0 var(--gutter);
+    box-shadow: none;
   }
   &__reset {
     border: 0;
