CHARS – add missing glides and diphtongs

--- a/css/svg-chars.css
+++ b/css/svg-chars.css
@@ -223,12 +223,152 @@
   height: 18.125em;
 }
 
-.char-dm-am {
+.char-dl-iia {
   width: 6.25em;
   height: 6.25em;
 }
 
-.char-dm-reu {
+.char-dl-sara-ua {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-dl-sara-uea {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-ds-sara-ia {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-ds-sara-ua {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-ds-sara-uea {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-aaeo {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-aai-variant-0 {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-aai {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-aao {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-aawy {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-aeo {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-eeuy {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-euuay {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-iaao {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-ooy {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-uaaw {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gl-uaay {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-ao {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-eo {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-iu {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-oi {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-sara-ai-variant-0 {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-sara-ai-variant-1 {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-sara-ai-variant-2 {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-sara-ai {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-uay {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-gs-ui {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-m-am {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-m-reu {
   width: 6.25em;
   height: 6.25em;
 }
