--- a/html/index.pug
+++ b/html/index.pug
@@ -21,7 +21,7 @@ html(lang="en")
     title= appTitle
     link(rel="stylesheet" href=`${BASE_URL}/thailpha.css`)
 
-    if (isRelease)
+    if (isGhpage)
       // Start Single Page Apps for GitHub Pages
       script.
         (function(l) {
