APP – fix crash if a letter is not found

--- a/css/module/char-detail.styl
+++ b/css/module/char-detail.styl
@@ -9,6 +9,14 @@
   background: $c-white;
 }
 
+.letter-not-found {
+  display: flex;
+  flex-center();
+  margin: 0;
+  height: calc(100vh - var(--nav-height));
+  font-size: fluid-fs(1);
+}
+
 :root {
   --variant-height: 25vh;
 }
