APP – more similar vowels

--- a/css/svg-chars.css
+++ b/css/svg-chars.css
@@ -228,12 +228,12 @@
   height: 6.25em;
 }
 
-.char-dl-sara-ua {
+.char-dl-sara-euua {
   width: 6.25em;
   height: 6.25em;
 }
 
-.char-dl-sara-uea {
+.char-dl-sara-ua {
   width: 6.25em;
   height: 6.25em;
 }
