APP – deploy fixed datas

--- a/css/svg-chars.css
+++ b/css/svg-chars.css
@@ -578,6 +578,11 @@
   height: 6.25em;
 }
 
+.char-vs-sara-e-variant-1 {
+  width: 6.25em;
+  height: 6.25em;
+}
+
 .char-vs-sara-e {
   width: 6.25em;
   height: 6.25em;
