--- a/html/index.pug
+++ b/html/index.pug
@@ -39,6 +39,15 @@ html(lang="en")
           }
         }(window.location))
       // End Single Page Apps for GitHub Pages
+    if (isRelease && isFirebaseRelease)
+      //- Global site tag (gtag.js) - Google Analytics
+      script(async src="https://www.googletagmanager.com/gtag/js?id=UA-42058488-3")
+      script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-42058488-3');
+
 
   body
     include svg-icons.svg
