--- a/html/index.pug
+++ b/html/index.pug
@@ -20,7 +20,7 @@ html(lang="en")
     link(rel="stylesheet" href=`${BASE_URL}/thailpha.css`)
 
     if (isGhRelease)
-      // Start Single Page Apps for GitHub Pages
+      //- Start Single Page Apps for GitHub Pages
       script.
         (function(l) {
           if (l.search) {
@@ -38,7 +38,7 @@ html(lang="en")
             }
           }
         }(window.location))
-      // End Single Page Apps for GitHub Pages
+      //- End Single Page Apps for GitHub Pages
     if (isRelease && isFirebaseRelease)
       //- Global site tag (gtag.js) - Google Analytics
       script(async src="https://www.googletagmanager.com/gtag/js?id=UA-42058488-3")
