--- a/css/atomic/button.styl
+++ b/css/atomic/button.styl
@@ -1,25 +1,34 @@
 .link {
-  color: $c-brand;
+  color: var(--c-primary);
 }
 .btn {
   text-decoration: none;
-  background: none;
+  background: var(--c-primary);
   border-radius: 0;
-  color: $c-brand;
-  border: 1px solid $c-brand;
+  border: 0;
+  color: var(--c-primary-contrast);
+  box-shadow: 0 10px 0 -5px var(--c-grey-lightest);
   cursor: pointer;
-  padding: .5em 1em;
+  padding: 1em 1.25em;
   font-size: 1em;
+  transition: transform 0.2s ease;
 
   &:hover,
   &:focus {
-    color: $c-brand-dark;
-    border-color: $c-brand-dark;
+    transform: scale(1.02);
+    // color: var(--c-primary-darker);
+    // border-color: var(--c-primary-darker);
     outline: none;
   }
-  &:active {
-    background: $c-brand;
-    color: $c-white;
-    border-color: $c-brand;
+
+  &:focus {
+    outline: 3px solid var(--c-accent);
   }
+  &:active {
+    background: var(--c-accent);
+  }
+  //   // background: var(--c-primary-darker);
+  //   // // color: var(--c-primary-);
+  //   // border-color: var(--c-primary);
+  // }
 }
