APP – simplify some rendering

--- a/html/index.pug
+++ b/html/index.pug
@@ -51,6 +51,7 @@ html(lang="en")
 
   body
     include svg-icons.svg
+    include svg-chars.svg
     #main
     script(src=`${BASE_URL}/thailpha-lib.js`)
     script(src=`${BASE_URL}/thailpha.js`)
