--- a/css/page/about.styl
+++ b/css/page/about.styl
@@ -1,6 +1,11 @@
 .about {
   min-height: calc(100vh - var(--nav-height));
 
+  @media $mq-small {
+    display: flex;
+    flex-direction: column;
+  }
+
   @media $mq-big {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -30,7 +35,9 @@
     }
   }
   &__footer {
-    align-self: end;
+    @media $mq-small {
+      margin-top: auto;
+    }
   }
 
   @media $mq-small {
