ABOUT – add hints to open sections

--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -14,6 +14,7 @@ $c-grey-light     = #CCC;
 $c-grey           = #999;
 
 $c-brand          = #54009D;
+$c-brand-lighter = lighten( $c-brand, 70% );
 $c-brand-lightest = lighten( $c-brand, 90% );
 $c-brand-darker   = darken( $c-brand, 40% );
 
@@ -40,6 +41,7 @@ $mq-landscape = '(orientation: landscape)';
   --nav-height: 50px;
   --c-primary: $c-brand;
   --c-primary-darker: $c-brand-darker;
+  --c-primary-lighter: $c-brand-lighter;
   --c-primary-lightest: $c-brand-lightest;
   --c-primary-contrast: white;
   --c-accent: $c-pink;
