--- a/css/module/search.scss
+++ b/css/module/search.scss
@@ -23,7 +23,7 @@
       // pos absolute centering because buttons doesn't play well with display flex everywhere
       position: absolute;
       top: 50%;
-      left: @top;
+      left: 50%;
       transform: translate(-50%, -50%);
       fill: var(--c-primary-contrast);
     }
