--- a/html/index.pug
+++ b/html/index.pug
@@ -1,24 +1,11 @@
 doctype html
 html(lang="en")
+  - const { isGhRelease,isRelease,isFirebaseRelease, appTitle } = self.htmlWebpackPlugin.options
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
-
-    link(rel="icon" sizes="228x228" href=`${BASE_URL}/touch-icon-iphone-6-plus.png`)
-
     meta(name="viewport" content="width=device-width")
-
-    link(rel="apple-touch-icon" href=`${BASE_URL}/touch-icon-iphone.png`)
-    link(rel="apple-touch-icon" sizes="76x76" href=`${BASE_URL}/touch-icon-ipad.png`)
-    link(rel="apple-touch-icon" sizes="120x120" href=`${BASE_URL}/touch-icon-iphone-retina.png`)
-    link(rel="apple-touch-icon" sizes="152x152" href=`${BASE_URL}/touch-icon-ipad-retina.png`)
-    link(rel="apple-touch-icon" sizes="180x180" href=`${BASE_URL}/touch-icon-iphone-6-plus.png`)
-
-    link(rel="manifest" href=`${BASE_URL}/manifest.json`)
-
     title= appTitle
-    link(rel="stylesheet" href=`${BASE_URL}/thailpha.css`)
-
     if (isGhRelease)
       //- Start Single Page Apps for GitHub Pages
       script.
@@ -48,10 +35,7 @@ html(lang="en")
         gtag('js', new Date());
         gtag('config', 'UA-42058488-3');
 
-
   body
     include svg-icons.svg
     include svg-chars.svg
     #main
-    script(src=`${BASE_URL}/thailpha-lib.js`)
-    script(src=`${BASE_URL}/thailpha.js`)
