REPO – reorganize code

--- a/css/index.scss
+++ b/css/index.scss
@@ -13,5 +13,6 @@
 @import './module/char-listing';
 @import './module/char-detail';
 @import './module/search';
+@import './module/pwa-refresh-ui';
 
 @import './page/about';
