--- a/html/index.pug
+++ b/html/index.pug
@@ -1,32 +1,12 @@
 doctype html
 html(lang="en")
-  - const { isGhRelease,isRelease,isFirebaseRelease, appTitle } = self.htmlWebpackPlugin.options
+  - const { isRelease, APP_TITLE } = self.htmlWebpackPlugin.options
   head
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport" content="width=device-width")
-    title= appTitle
-    if (isGhRelease)
-      //- Start Single Page Apps for GitHub Pages
-      script.
-        (function(l) {
-          if (l.search) {
-            var q = {};
-            l.search.slice(1).split('&').forEach(function(v) {
-              var a = v.split('=');
-              q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
-            });
-            if (q.p !== undefined) {
-              window.history.replaceState(null, null,
-                l.pathname.slice(0, -1) + (q.p || '') +
-                (q.q ? ('?' + q.q) : '') +
-                l.hash
-              );
-            }
-          }
-        }(window.location))
-      //- End Single Page Apps for GitHub Pages
-    if (isRelease && isFirebaseRelease)
+    title= APP_TITLE
+    if (isRelease)
       //- Global site tag (gtag.js) - Google Analytics
       script(async src="https://www.googletagmanager.com/gtag/js?id=UA-42058488-3")
       script.
