--- a/css/global.scss
+++ b/css/global.scss
@@ -6,7 +6,8 @@
 html,
 body {
   margin: 0;
-  font-family: 'Helvetica', 'Arial', 'sans-serif';
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   color: $c-black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
